# university-helper

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_GUIDE.md  DEPLOY_GUIDE.zh-CN.md  DEPLOY_MANUAL.md  DEPLOY_MANUAL.zh-CN.md  Dockerfile  Dockerfile.nginx  Dockerfile.server  ENTERPRISE_INTEGRATION_COMPLETE.md  LICENSE  Makefile  README.md  README.zh-CN.md  REFACTOR_COMPLETE.md  deploy.ps1  deploy.sh  deploy_auto.py  deploy_pure.py  docker-compose.server.yml  docker-compose.yml  server_deploy.sh
backend/: .coveragerc  .env.example  LOGGING_GUIDELINES.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/versions/: 001_add_email_index.py
backend/api/: __init__.py  answer.py  base.py  config.py  cookies.py  cxsecret_font.py  exceptions.py  font_decoder.py  live.py  live_process.py  logger.py  vision_ocr.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: credential_crypto.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/middleware/: rate_limiter.py  tenant_isolation.py
backend/app/schemas/: auth.py  course.py
backend/app/services/: auth_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_course_api.py
backend/tests/performance/: test_auth_performance.py  test_course_performance.py
backend/tests/unit/: conftest.py  test_api_runtime_guards.py  test_auth_rate_limiter.py  test_auth_service.py  test_chaoxing_learning_manager.py  test_chaoxing_location_search.py  test_chaoxing_login.py  test_config.py  (+13 more)
(+116 files in other folders)
